finall css and bug squashing

--- a/frontend/src/components/IndividualSpot/individualSpot.css
+++ b/frontend/src/components/IndividualSpot/individualSpot.css
@@ -1,5 +1,5 @@
 .Indv-spot-div {
-    border: solid 1px blue;
+    /* border: solid 1px blue; */
     position: relative;
     width: auto;
     height: auto;
@@ -22,34 +22,38 @@ div .reviewBox {
 .span-title {
     font-size: 2rem;
     font-weight: 500;
-    border: solid 1px blue;
+    /* border: solid 1px blue; */
     width: fit-content;
+    margin-left: 8rem;
+}
+.span-address-single {
+    margin-left: 8rem;
 }
 
 .image-block {
     position: relative;
     width: auto;
-    
+
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     margin: 0;
     align-items: center;
     justify-content: center;
-    border: solid 1px blue;
+    /* border: solid 1px blue; */
 }
 
 .single-url1 {
     width: min-content;
     height: min-content;
-    border: solid 1px blue;
+    /* border: solid 1px blue; */
     margin: .1rem .1rem;
     /* border-radius: 1rem 0rem 0rem 1rem; */
 }
 
 .img-url1 {
-    width: auto;
-    height: 25rem;
+    width: 30rem;
+    height: auto;
     border-radius: 2%;
     object-fit: cover;
 }
@@ -64,7 +68,7 @@ div .reviewBox {
 }
 .img-url2 {
     width: auto;
-    height: 16rem;
+    height: 12rem;
     border-radius: 2%;
     object-fit: cover;
 }
@@ -78,7 +82,7 @@ div .reviewBox {
 }
 .img-url3 {
     width: auto;
-    height: 16rem;
+    height: 12rem;
     border-radius: 2%;
     object-fit: cover;
 }
