--- a/frontend/src/components/review.css
+++ b/frontend/src/components/review.css
@@ -3,5 +3,9 @@ textarea {
 }
 
 .review-form {
-    width:auto
+    width: 60rem;
+}
+
+.create-review {
+    margin-right: 6rem;
 }
